--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -14,6 +14,7 @@
             <StackPanel VerticalAlignment="Top" Margin="0,25,0,0">
 
                 <!-- الأزرار ستكون هنا -->
+                <!-- زر المخزون -->
                 <Button Style="{DynamicResource NavButtonStyle}" ToolTip="المخزون" Click="InventoryButton_Click">
                     <Image Source="/Resources/Icons/inventory.png" Width="35" Height="35" />
                 </Button>
@@ -24,8 +25,8 @@
                 </Button>
 
                 <!-- زر الفواتير -->
-                <Button Style="{DynamicResource NavButtonStyle}" ToolTip="فواتير البيع">
-                    <Image Source="/Resources/Icons/invoices.png" Width="35" Height="35" Margin="0,25,0,0"/>
+                <Button Style="{DynamicResource NavButtonStyle}" ToolTip="فواتير البيع" Click="InvoicesButton_Click">
+                    <Image Source="/Resources/Icons/invoices.png" Width="35" Height="35" Margin="0,25,0,0" />
                 </Button>
 
                 <!-- زر الديون -->
